Data collection bug fixed, UI updated

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div id="navBtns">
     <span id="countDownTimer" class="badge badge-danger">0m 0s left</span>
-    <span id="instructionSpan" class="alert alert-danger">This is a primary alert—check it out!</span>
+    <span id="instructionSpan" class="alert alert-danger">Press the Start Measurement button!</span>
     <button id="resetBtn" type="button" class="btn btn-dark">Reset</button>
     <button id="download_csv" type="button" class="btn btn-success">Download CSV</button> 
   </div>
